About: A basic hurricane simulator made for the Hypothetical Hurricanes Wiki. Soon to be more advanced.

v20180810a:
    + Added clickable UI elements/buttons, opening the door for more possibilities in this sim along with better mobile compatibility
    + Added a pause button, which works alongside the existing "space"
        > The indicator text also functions as an extension of the pause button when a storm isn't selected
    + Added a date navigator UI, which can be accessed by clicking the time in the upper left
        > Using the arrow buttons, you can jump through analysis by the year, month, day, or advisory increment (6 hours)
        > The arrow keys still work alongside this new UI
    + Added rudimentary seasonal activity; storms should now be more common and stronger in September than in January
    * Some tweaks to steering
v20180731a:
    + Added environmental steering; may need some work
    * Some adjustments to storm strength algorithm
    * Spawning frequency and ranges adjusted
v20180729a:
    + Storms now keep track of their peak intensity (by pressure), including all associated data at the point of peak intensity
    + Added ACE
    * Inactive selected storms now display their full name as of peak intensity, plus ACE
    * You can now hold down the arrow keys in analysis to quickly move backwards and forwards
v20180728b:
    + Added 5 different simulation speed levels: Full-Speed, Half-Speed, 1/3 Speed, 1/4 Speed, and 1/5 Speed
        > Press "[" to slow the simulation down and "]" to speed the simulation up
    + Added indicator in the upper-right (when a storm is not selected) for simulation speed and if the sim is paused
v20180728a:
    + Added subtropical and extratropical storms
        > Spawn extratropical systems with "x"; subtropical storms cannot yet be spawned
    + Added pressure; wind speed is now based on pressure
    + Added a temporary environmental gradient for determining extratropical vs. subtropical vs. tropical